<resources>
    <string name="app_name">Radiobtn_ImageView</string>
    <string name="Customer_Detail">Customer Detail</string>
    <string name="others">Others</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender :</string>
    <string name="she">SHE</string>
    <string name="he">HE</string>
    <string name="other">Other</string>
    <string name="register">Register</string>
    <string name="hotel_image_clicked">Hotel Image Clicked</string>
</resources>