<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 android:gravity="center"
    >
<ImageView
    android:id="@+id/ivHotel"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:src="@drawable/royal_hotel"
/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Customer_Detail"
        android:gravity="center"
        android:textSize="25sp"
         android:textStyle="bold" />
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:drawableLeft="@drawable/ic_baseline_create_24"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:drawableLeft="@drawable/ic_phone"
        android:textSize="20sp"
        android:digits="0123456789"
        android:maxLength="10" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp" />
    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbShe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/she"
            android:textSize="15sp" />
    <RadioButton
        android:id="@+id/rbHe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/he"
        android:layout_marginHorizontal="15dp" />
    <RadioButton
        android:id="@+id/rbOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:layout_marginHorizontal="15dp" />
</RadioGroup>
    <EditText
        android:id="@+id/etOtherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/others" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/register"
        />

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>